--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
     <body>
         <div id="container">
             <div>
-            <video autoplay="true" id="videoElement"></video>
+            <video autoplay="true" id="videoElement" playsinline></video>
                 <canvas id="canvasElement"></canvas>
 
                 <img id="photo">
